# windowmanager-poc

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
docs/: architecture.md
src/core/: docking.ts  index.ts  layout.ts  magnet.ts  workspace.ts  workspaceManager.ts
src/platform/common/: IWindowController.ts  virtualWindowController.ts
src/platform/linux/: windowController.ts
src/platform/linux/native/: window_controller_stub.cpp
src/platform/mac/: windowController.ts
src/platform/mac/native/: window_controller_stub.cpp
src/platform/native/: window_controller_stub.cpp  window_controller_stub.h
src/platform/win/: windowController.ts
src/platform/win/native/: window_controller_stub.cpp
src/ui/: electronHost.ts  electronWorkspaceUi.ts  index.ts  shell.ts  uiTypes.ts  webServer.ts  workspacePersistence.ts
tests/: application.test.ts  electronWorkspaceUi.test.ts  layout.test.js  layout.test.ts  magnet.test.ts  persistence.test.js  persistence.test.ts  shell.test.ts  virtualWindowController.test.ts  webServer.test.ts  workspace.test.js  workspace.test.ts  workspaceManager.test.ts  workspacePersistence.test.ts
